K3s/Certificate_with_k3s+traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: main
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: main.dkrp2.xyz
      http:
        paths:
          - backend:
              service:
                name: main
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - main.dkrp2.xyz
